--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,18 @@
   height: 100%;
   margin: auto;
 }
+#navBarLinks > a {
+  color: white !important;
+  background-color: transparent;
 
+  font-size: 1rem;
+  font-weight: 700;
+}
+#activeTab {
+  border-bottom: 3px orangered solid;
+  outline: none !important;
+  background-color: white;
+}
 .MuiToolbar-root {
   padding: 0;
   max-width: 100%;
@@ -12,12 +23,14 @@
   font-size: 1rem;
   font-weight: 700;
   border-bottom: rgb(255, 0, 0) 2px solid;
+  height: 100%;
   background-color: black;
   color: white;
 }
 
 #navBarLinks {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -135,18 +148,22 @@
 
 .newsTitle {
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   height: 10%;
 }
 a {
   color: black;
   text-decoration: none;
 }
+a:active {
+  background-color: grey;
+}
+
 .newsText {
   justify-content: center;
 }
 
-@media screen and (min-width: 600px) and (max-width: 1100px) {
+@media screen and (min-width: 600px) and (max-width: 1270px) {
   .newsTitle {
     font-size: 1rem;
   }
