--- a/src/App.css
+++ b/src/App.css
@@ -179,11 +179,11 @@ a:active {
   z-index: 5;
   bottom: 10px;
   right: 5px;
+  max-width: 150px;
   width: 130px;
   display: flex;
   justify-content: space-between;
   padding: 0 5px 0 5px;
-  background-color: ;
 }
 
 #languageArrow {
