--- a/src/App.css
+++ b/src/App.css
@@ -67,16 +67,17 @@
   max-height: 100%;
   padding: 10px 0 10px 0;
 }
-.infoPanel:nth-child(odd) {
+.infoPanel:nth-child(even) {
   background-color: rgb(250, 160, 75);
 }
 .coverPanel {
-  min-height: 800px !important;
+  min-height: 900px !important;
   text-align: center;
+  justify-content: center;
 }
-@media screen and (max-height: 575px) {
+@media screen and (max-height: 640px) {
   .coverPanel {
-    min-height: 600px !important;
+    min-height: 640px !important;
     text-align: center;
   }
 }
@@ -86,7 +87,20 @@
   font-size: 2rem;
 }
 #coverPanelText2 {
-  color: black;
+  color: white;
+  font-size: 2rem;
+  margin: auto;
+}
+@media screen and (max-width: 600px) {
+  #coverPanelText1 {
+    font-size: 1.7rem;
+  }
+  #coverPanelText2 {
+    font-size: 1.6rem;
+  }
+}
+#coverPanelText3 {
+  color: white;
   font-size: 2rem;
   margin: auto;
 }
@@ -105,10 +119,19 @@
 #coverPanel2 {
   background-image: linear-gradient(
       to bottom,
-      rgba(148, 148, 148, 0.7),
-      rgba(255, 255, 255, 0.5)
+      rgba(0, 0, 0, 0.7),
+      rgba(0, 0, 0, 0.5)
     ),
     url("images/cemetary1.jpg");
+  background-size: cover;
+}
+#coverPanel3 {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(233, 10, 10, 0.6),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("images/town.jpg");
   background-size: cover;
 }
 .MuiButtonBase-root {
@@ -203,4 +226,19 @@ a:active {
 }
 .MuiSvgIcon-root {
   fill: red !important;
+}
+
+#helpMainBody {
+  width: 50%;
+  justify-content: center;
+}
+#helpPage {
+  justify-content: center;
+}
+
+.helpLinks {
+  color: blue;
+}
+.helpLinks:visited {
+  color: grey;
 }
